--- a/deployment.yaml
+++ b/deployment.yaml
@@ -51,7 +51,7 @@ metadata:
     allow.http: "false"
 spec:
   rules:
-  - host: goteste.cloud.jacexperts.io/
+  - host: goteste.cloud.jacexperts.io
     http:
       paths:
         - path: /
